Introduce `replaces` field in CSV
This is now mandated by CVP if the CSV uses the `skipRange` field.

Fixes: KATA-2894

Signed-off-by: Greg Kurz <groug@kaod.org>

--- a/config/manifests/bases/sandboxed-containers-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/sandboxed-containers-operator.clusterserviceversion.yaml
@@ -365,6 +365,7 @@ spec:
   maturity: beta
   provider:
     name: Red Hat
+  replaces: sandboxed-containers-operator.v1.5.1
   version: 1.5.2
   webhookdefinitions:
   - admissionReviewVersions:
