--- a/config/peerpods/podvm/osc-podvm-create-job.yaml
+++ b/config/peerpods/podvm/osc-podvm-create-job.yaml
@@ -15,7 +15,7 @@ spec:
       # /podvm-binaries.tar.gz /payload/podvm-binaries.tar.gz
       initContainers:
         - name: copy
-          image: quay.io/openshift_sandboxed_containers/openshift-sandboxed-containers-podvm-payload:latest
+          image: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-payload-rhel9:latest
           command: ["/bin/sh", "-c"]
           args:
             - |
@@ -29,7 +29,7 @@ spec:
         - name: create
           # Binaries like kubectl, packer and yq are expected to be under /usr/local/bin
           # podvm binaries are expected to be under /payload/podvm-binaries.tar.gz
-          image: quay.io/openshift_sandboxed_containers/openshift-sandboxed-containers-podvm-builder:latest
+          image: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-builder-rhel9:latest
           # This image contains the following
           # azure-podvm-image-handler.sh script under /scripts/azure-podvm-image-handler.sh
           # aws-podvm-image-handler.sh script under /scripts/aws-podvm-image-handler.sh
