Add reference to RELATED_IMAGE_PODVM_PAYLOAD
Fixes: KATA-2906

Signed-off-by: Pradipta Banerjee <pradipta.banerjee@gmail.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -86,6 +86,8 @@ spec:
               value: registry.redhat.io/openshift-sandboxed-containers/osc-cloud-api-adaptor-webhook-rhel9:latest
             - name: RELATED_IMAGE_PODVM_BUILDER
               value: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-builder-rhel9:latest
+            - name: RELATED_IMAGE_PODVM_PAYLOAD
+              value: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-payload-rhel9:latest
           imagePullPolicy: Always
           resources:
             limits:
