Create and Delete a unique gallery name if required
If IMAGE_GALLERY_NAME in azure-podvm-image-cm is empty, then a
gallery name will be created with the pattern
"PodVMGallery_$clusterid. Note that only the first 8 chars of the
clusterid is used.
IMAGE_GALLERY_NAME annotation is added to peer-pods-cm configMap
if gallery is created by OSC job

FIXES: #KATA-2958

Signed-off-by: Pradipta Banerjee <pradipta.banerjee@gmail.com>

--- a/config/peerpods/podvm/azure-podvm-image-cm.yaml
+++ b/config/peerpods/podvm/azure-podvm-image-cm.yaml
@@ -8,7 +8,13 @@ data:
   PODVM_DISTRO: rhel
 
   # Gallery
-  IMAGE_GALLERY_NAME: "PodVMGallery"
+  # Set the gallery name explicitly, otherwise it'll be set by the operator to
+  # PodVMGallery_${cluster-id}. If a gallery name is provided, the job will
+  # use the specific gallery name.
+  # Note that the gallery name must be unique across the subscription and not exceed 80 characters.
+  # Also, the allowed characters are English alphanumeric characters,
+  # with underscores and periods allowed in the middle
+  IMAGE_GALLERY_NAME: ""
 
   # Image definition
   IMAGE_DEFINITION_NAME: "podvm-image"
