--- a/config/peerpods/podvm/osc-podvm-gallery-delete-job.yaml
+++ b/config/peerpods/podvm/osc-podvm-gallery-delete-job.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: delete-gallery
-          image: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-builder-rhel9:latest
+          image: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-builder-rhel9:1.6.0
           securityContext:
             runAsUser: 0 # needed for container mode dnf access
           envFrom:
