--- a/config/peerpods/local/configuration-remote.toml
+++ b/config/peerpods/local/configuration-remote.toml
@@ -330,7 +330,7 @@ valid_entropy_sources = ["/dev/urandom","/dev/random",""]
 # https://github.com/opencontainers/runtime-spec/blob/v1.0.1/config.md#posix-platform-hooks
 # Warnings will be logged if any error is encountered while scanning for hooks,
 # but it will not abort container execution.
-#guest_hook_path = "/usr/share/oci/hooks"
+guest_hook_path = "/usr/share/oci/hooks"
 #
 # Use rx Rate Limiter to control network I/O inbound bandwidth(size in bits/sec for SB/VM).
 # In Qemu, we use classful qdiscs HTB(Hierarchy Token Bucket) to discipline traffic.
