podvm-builder: Add support for embedding pause image
Downloads the pause image using skopeo and uses
umoci to create the oci bundle for embedding

The following OCP pause image is embedded by default
quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:7f3cb6f9d265291b47a7491c2ba4f4dd0752a18b661eee40584f9a5dbcbe13bb

A new bash method download_and_extract_pause_image is introduced which
accepts three parameters via env variable:

PAUSE_IMAGE_REPO, PAUSE_IMAGE_VERSION and PAUSE_IMAGE_REPO_AUTH_FILE

These can be set in the respective podvm image configMap
(<provider>-podvm-image-cm.yaml) before kickstarting the pod vm image
generation if required.

The PAUSE_IMAGE_REPO_AUTH_FILE points to a json file containing the registry
secret to pull the image from authenticated registry.

The default is the cluster secret that is mounted as a volume in the
`/tmp/regauth/auth.json` for osc-podvm-create-job.yaml to download OCP
pause image.

Fixes: #KATA-3156

Signed-off-by: Pradipta Banerjee <pradipta.banerjee@gmail.com>

--- a/config/peerpods/podvm/osc-podvm-create-job.yaml
+++ b/config/peerpods/podvm/osc-podvm-create-job.yaml
@@ -53,7 +53,12 @@ spec:
           volumeMounts:
             - name: payload
               mountPath: /payload
+            - name: regauth
+              mountPath: /tmp/regauth
       volumes:
         - name: payload
           emptyDir: {}
+        - name: regauth
+          secret:
+            secretName: auth-json-secret
       restartPolicy: Never
