podvm-builder: Update labels to align with upstream
cloud-api-adaptor uses kata/main now. So update the labels
to reflect the current versions of kata used with CAA

Signed-off-by: Pradipta Banerjee <pradipta.banerjee@gmail.com>

--- a/config/peerpods/podvm/Dockerfile.podvm-builder
+++ b/config/peerpods/podvm/Dockerfile.podvm-builder
@@ -7,8 +7,8 @@ FROM registry.access.redhat.com/ubi9/ubi:9.4
 # Binaries like kubectl, packer and yq under /usr/local/bin will be installed by the scripts
 
 
-LABEL kata_src=https://github.com/kata-containers/kata-containers/tree/CC-0.8.0
-LABEL kata_src_commit=8de1f8e19f858134ba455a7c04edcb21d8bcf6b1
+LABEL kata_src=https://github.com/kata-containers/kata-containers
+LABEL kata_src_commit=stable-3.6
 
 RUN mkdir -p /scripts
 
