Add libvirt provider support for image building
Added a new handler for libvirt to build the qcow2 image.
New ConfigMap added for libvirt specific data.
Modified the podvm create job to accomodate libvirt as well.
Added required changes for the image_generator controller.

Signed-off-by: Suprit-Iti <suprit.iti@ibm.com>

--- a/config/peerpods/peerpodssecret.yaml
+++ b/config/peerpods/peerpodssecret.yaml
@@ -9,3 +9,5 @@ stringData:
   #LIBVIRT_URI: "qemu+ssh://root@192.168.122.1/system?no_verify=1"
   #LIBVIRT_NET: "default
   #LIBVIRT_POOL: "default"
+  #REDHAT_OFFLINE_TOKEN: "" #Required to download rhel base image : Download token from https://access.redhat.com/management/api
+  
