--- a/config/peerpods/podvm/osc-podvm-create-job.yaml
+++ b/config/peerpods/podvm/osc-podvm-create-job.yaml
@@ -49,16 +49,30 @@ spec:
             - configMapRef:
                 name: aws-podvm-image-cm
                 optional: true
+            - configMapRef:
+                name: libvirt-podvm-image-cm
+                optional: true
           command: ["/podvm-builder.sh", "create"]
           volumeMounts:
             - name: payload
               mountPath: /payload
             - name: regauth
-              mountPath: /tmp/regauth
+              mountPath: /tmp/regauth  
+            - name: ssh-key-secret
+              mountPath: "/root/.ssh/"
+              readOnly: true
+              optional: true             
       volumes:
         - name: payload
           emptyDir: {}
         - name: regauth
           secret:
             secretName: auth-json-secret
+        - name: ssh-key-secret
+          secret:
+            secretName: ssh-key-secret
+            items:
+            - key: id_rsa
+              path: "id_rsa"
+            defaultMode: 0400
       restartPolicy: Never
