--- a/config/peerpods/podvm/Dockerfile.podvm-builder
+++ b/config/peerpods/podvm/Dockerfile.podvm-builder
@@ -12,7 +12,7 @@ LABEL kata_src_commit=stable-3.6
 
 RUN mkdir -p /scripts
 
-ADD lib.sh aws-podvm-image-handler.sh azure-podvm-image-handler.sh  /scripts/
+ADD lib.sh libvirt-podvm-image-handler.sh aws-podvm-image-handler.sh azure-podvm-image-handler.sh /scripts/
 
 RUN /scripts/azure-podvm-image-handler.sh -- install_rpms
 
