podvm: allow setting custom agent-policy
by setting base64 encoded policy file string to the AGENT_POLICY key in the
<azure/aws-podvm>-image-cm ConfigMap

$ ENCODED_POLICY=$(cat allow-all-except-exec-process.rego | base64 -w 0)
$ kubectl patch cm aws-podvm-image-cm -p "{\"data\":{\"AGENT_POLICY\":\"${ENCODED_POLICY}\"}}" -n openshift-sandboxed-containers-operator

Signed-off-by: Snir Sheriber <ssheribe@redhat.com>

--- a/config/peerpods/podvm/azure-podvm-image-cm.yaml
+++ b/config/peerpods/podvm/azure-podvm-image-cm.yaml
@@ -56,3 +56,6 @@ data:
   # NVIDIA GPU vars
   NVIDIA_DRIVER_VERSION: "535"
   NVIDIA_USERSPACE_VERSION: "1.13.5-1"
+
+  # Custom Agent Policy
+  #AGENT_POLICY: "" # set to base64 encoded agent policy
