credentials-controller: reduce credentials requested for Azure
based on requirement to AKS from the CAA docs

Signed-off-by: Snir Sheriber <ssheribe@redhat.com>

--- a/config/peerpods/credentials-requests/credentials_request_azure.yaml
+++ b/config/peerpods/credentials-requests/credentials_request_azure.yaml
@@ -10,5 +10,7 @@ spec:
   providerSpec:
     apiVersion: cloudcredential.openshift.io/v1
     kind: AzureProviderSpec
-    roleBindings: # limit
-      - role: Contributor
+    roleBindings:
+      - role: Reader
+      - role: Virtual Machine Contributor
+      - role: Network Contributor
