--- a/config/peerpods/credentials-requests/credentials_request_aws.yaml
+++ b/config/peerpods/credentials-requests/credentials_request_aws.yaml
@@ -10,8 +10,31 @@ spec:
   providerSpec:
     apiVersion: cloudcredential.openshift.io/v1
     kind: AWSProviderSpec
-    statementEntries: # limit permissions
+    statementEntries:
     - effect: Allow
-      action:
-        - "*"
       resource: "*"
+      action:
+        - "ec2:*"
+        # By default we allow all ec2 actions to prevent dysfunctioning for untested configurations.
+        # The following actions were extracted from AWS CloudTrail Event History,
+        # filtered based on access key, for peer-pod execution with default configuration.
+        # use it to restrict the requested permissions.
+        #- ec2:AuthorizeSecurityGroupIngress
+        #- ec2:CreateDefaultVpc
+        #- ec2:CreateImage
+        #- ec2:CreateKeyPair
+        #- ec2:CreateTags
+        #- ec2:CreateSecurityGroup
+        #- ec2:DeleteKeyPair
+        #- ec2:DeleteSecurityGroup
+        #- ec2:DescribeImages
+        #- ec2:DescribeInstances
+        #- ec2:DescribeInstanceTypes
+        #- ec2:DescribeRegions
+        #- ec2:DescribeSecurityGroups
+        #- ec2:DescribeSubnets
+        #- ec2:DescribeVolumes
+        #- ec2:DescribeVpcs
+        #- ec2:RunInstances
+        #- ec2:StopInstances
+        #- ec2:TerminateInstances
