Secure execution (SE) enabled peepod for s390x
Sandboxed containers operator to build secure execution enabled peer pod Image

Signed-off-by: Anjana A R K <ANJANA.A.R.K1@ibm.com>

--- a/config/peerpods/podvm/libvirt-podvm-image-cm.yaml
+++ b/config/peerpods/podvm/libvirt-podvm-image-cm.yaml
@@ -21,4 +21,8 @@ data:
   # Libvirt specific
   ORG_ID: ""
   ACTIVATION_KEY: ""
-  BASE_OS_VERSION: "9.2"
+  BASE_OS_VERSION: "9.4"
+
+  # To Enable SE for IBM Z
+  SE_BOOT: "true"
+  
